--- a/.github/workflows/cd-release-aks.yml
+++ b/.github/workflows/cd-release-aks.yml
@@ -1,15 +1,23 @@
 #
-# Build and push image to GitHub Container Registry
-# Then deploy to AZure Kubernetes Service using Helm
+# Deploy to Azure Kubernetes Service using Helm
 # Using Bicep for infrastructure as code
 #
 
 name: CD Release - AKS
 
 on:
-  push:
+  # Run when CI completes but ONLY in master branch
+  workflow_run:
+    workflows: [CI Build App]
     branches: [master]
+    types:
+      - completed
   workflow_dispatch:
+    inputs:
+      imagetag:
+        description: "Image tag to be deployed"
+        required: true
+        default: "latest"
 
 # Note. Required secrets: CR_PAT & AZURE_CREDENTIALS
 
@@ -24,39 +32,21 @@ env:
 
 jobs:
   #
-  # Run the image build & push to registry
-  #
-  build-app:
-    name: Build & Push Image
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Docker build image
-        run: docker build . -t $IMAGE_REG/$IMAGE_REPO:${{ github.run_id }} -t $IMAGE_REG/$IMAGE_REPO:latest
-
-      - name: Login to GitHub container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.IMAGE_REG }}
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
-
-      - name: Docker push image to ${{ env.IMAGE_REG }}
-        run: docker push $IMAGE_REG/$IMAGE_REPO
-
-  #
   # Deploy to Kubernetes (AKS)
   #
   deploy-aks:
     name: Deploy to AKS with Helm
-    needs: build-app
     runs-on: ubuntu-latest
     outputs:
       deployment_id: ${{ steps.deploy.outputs.deployment_id }}
 
     steps:
-      - uses: actions/checkout@v1
+      # Note. This trick allows both manual running with workflow_dispatch and CD triggered runs
+      - name: "Set IMAGE_TAG variable"
+        run: echo "IMAGE_TAG=${{ github.event.workflow_run.id }}${{ github.event.inputs.imagetag }}" >> $GITHUB_ENV
+
+      - name: "Checkout"
+        uses: actions/checkout@v1
 
       - name: "Start deployment"
         id: deploy
@@ -66,23 +56,23 @@ jobs:
           token: ${{ github.token }}
           environment: AKS - ${{ env.HELM_RELEASE }}
 
-      - name: Login to Azure
+      - name: "Login to Azure"
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Get AKS credentials
+      - name: "Get AKS credentials"
         run: |
           az aks get-credentials -n $AKS_NAME -g $AKS_RES_GROUP
 
-      - name: Helm release
+      - name: "Helm release"
         run: |
           helm upgrade ${{ env.HELM_RELEASE }} \
           https://code.benco.io/helm-charts/webapp-1.2.0.tgz \
           --install \
           --namespace ${{ env.HELM_NAMESPACE }} \
           --values ./kubernetes/app.yaml \
-          --set image.tag=latest,image.repository=${{ env.IMAGE_REG }}/${{ env.IMAGE_REPO }},env.AAD_REDIRECT_URL_BASE=https://${{ env.INGRESS_DNS_HOST }},ingress.host=${{ env.INGRESS_DNS_HOST }}
+          --set image.tag=${{ env.IMAGE_TAG }},image.repository=${{ env.IMAGE_REG }}/${{ env.IMAGE_REPO }},env.AAD_REDIRECT_URL_BASE=https://${{ env.INGRESS_DNS_HOST }},ingress.host=${{ env.INGRESS_DNS_HOST }}
 
       - name: "End deployment - failure"
         if: ${{ failure() }}
@@ -96,16 +86,17 @@ jobs:
   # Post deployment testing stage
   #
   validate-deployment:
-    name: Smoke Test App Deployment
+    name: "Run Deployment Tests"
     needs: deploy-aks
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: "Checkout"
+        uses: actions/checkout@v2
 
-      - name: Validate site is running
+      - name: "Validate site is running"
         run: .github/scripts/url-check.sh -u https://${{ env.INGRESS_DNS_HOST }} -s "Node.js Demo App" -t 200
 
-      - name: Run API tests
+      - name: "Run API tests"
         run: |
           npm install newman --silent
           node_modules/newman/bin/newman.js run src/tests/postman_collection.json --global-var apphost=${{ env.INGRESS_DNS_HOST }}
