--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   test:
-    name: Tests & Linting
+    name: "Tests & Linting"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -34,17 +34,19 @@ jobs:
           path: ./src/test-results.xml
 
   build:
-    name: Build Image
+    name: "Build & Push Image"
     needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
+      - run: echo ${{ github.ref }}
+
       - name: "Docker build image"
         run: docker build . -t $IMAGE_REG/$IMAGE_REPO:${{ github.run_id }} -t $IMAGE_REG/$IMAGE_REPO:latest
 
       - name: "Login to GitHub container registry"
-        if: github.ref == 'ref/head/master'
+        if: github.ref == 'refs/heads/master'
         uses: docker/login-action@v1
         with:
           registry: ${{ env.IMAGE_REG }}
@@ -52,5 +54,5 @@ jobs:
           password: ${{ secrets.CR_PAT }}
 
       - name: "Docker push image to ${{ env.IMAGE_REG }}"
-        if: github.ref == 'ref/head/master'
+        if: github.ref == 'refs/heads/master'
         run: docker push $IMAGE_REG/$IMAGE_REPO
