--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -28,9 +28,14 @@ jobs:
         run: npm run test-junit
         working-directory: ./src
 
-      - uses: actions/upload-artifact@v2
+      # - uses: actions/upload-artifact@v2
+      #   with:
+      #     name: test-results
+      #     path: ./src/test-results.xml
+      - uses: ashley-taylor/junit-report-annotations-action@1.3
+        if: always()
         with:
-          name: test-results
+          access-token: ${{ github.token }}
           path: ./src/test-results.xml
 
   build:
