--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -32,11 +32,11 @@ jobs:
       #   with:
       #     name: test-results
       #     path: ./src/test-results.xml
-      - uses: ashley-taylor/junit-report-annotations-action@1.3
-        if: always()
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v1
         with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
-          path: ./src/test-results.xml
+          report_paths: src/test-results.xml
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
   build:
     name: "Build & Push Image"
