--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -28,14 +28,14 @@ jobs:
         run: npm run test-junit
         working-directory: ./src
 
-      # - uses: actions/upload-artifact@v2
-      #   with:
-      #     name: test-results
-      #     path: ./src/test-results.xml
+      - uses: actions/upload-artifact@v2
+        with:
+          name: test-results
+          path: ./src/test-results.xml
       - name: Publish test report
         uses: mikepenz/action-junit-report@v1
         with:
-          report_paths: "**/test-results.xml"
+          report_paths: "**/test-*.xml"
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
   build:
