--- a/src/package.json
+++ b/src/package.json
@@ -18,7 +18,7 @@
     "watch": "nodemon -e ejs",
     "test-junit": "mocha --reporter mocha-junit-reporter --exit ./tests",
     "test": "mocha --exit ./tests",
-    "test-postman": "newman run ./tests/postman_collection.json -r junit --timeout 60000 --reporter-junit-export test-results.xml",
+    "test-postman": "newman run ./tests/postman_collection.json -r junit --timeout 60000 --reporter-junit-export TEST-RESULTS.xml",
     "lint": "eslint ."
   },
   "dependencies": {
