--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -28,16 +28,12 @@ jobs:
         run: npm run test-junit
         working-directory: ./src
 
-      - uses: actions/upload-artifact@v2
-        with:
-          name: test-results
-          path: ./src/test-results.xml
-
       - uses: ashley-taylor/junit-report-annotations-action@master
         if: always()
         with:
           access-token: ${{ secrets.GITHUB_TOKEN }}
           path: ./src/test-results.xml
+          name: Unit test results
 
   build:
     name: "Build & Push Image"
