--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -14,21 +14,29 @@ jobs:
     name: "Tests & Linting"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: "Checkout"
+        uses: actions/checkout@v2
 
-      - name: NPM install
+      - name: "NPM install"
         run: npm install --silent
         working-directory: ./src
 
-      - name: Run linting
+      - name: "Run linting"
         run: npm run lint
         working-directory: ./src
 
-      - name: Run tests
+      - name: "Run tests"
         run: npm run test-junit
         working-directory: ./src
 
-      - uses: ashley-taylor/junit-report-annotations-action@master
+      - name: "Upload test results"
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-results
+          path: ./src/test-results.xml
+
+      - name: "Report on test results"
+        uses: ashley-taylor/junit-report-annotations-action@master
         if: always()
         with:
           access-token: ${{ secrets.GITHUB_TOKEN }}
@@ -40,9 +48,8 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - run: echo ${{ github.ref }}
+      - name: "Checkout"
+        uses: actions/checkout@v2
 
       - name: "Docker build image"
         run: docker build . -t $IMAGE_REG/$IMAGE_REPO:${{ github.run_id }} -t $IMAGE_REG/$IMAGE_REPO:latest
