--- a/.github/workflows/cd-release-aks.yaml
+++ b/.github/workflows/cd-release-aks.yaml
@@ -37,6 +37,8 @@ jobs:
   deploy-aks:
     name: Deploy to AKS with Helm
     runs-on: ubuntu-latest
+    # Important! workaround to not being able to trigger on "type:success"
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     outputs:
       deployment_id: ${{ steps.deploy.outputs.deployment_id }}
 
@@ -116,4 +118,4 @@ jobs:
         with:
           token: ${{ github.token }}
           state: failure
-          deployment_id: ${{ needs.deploy-bicep.outputs.deployment_id }}
+          deployment_id: ${{ needs.deploy-aks.outputs.deployment_id }}
