--- a/.github/workflows/cd-release-webapp.yaml
+++ b/.github/workflows/cd-release-webapp.yaml
@@ -36,6 +36,8 @@ jobs:
   deploy-infra:
     name: "Deploy Infra"
     runs-on: ubuntu-latest
+    # Important! workaround to not being able to trigger on "type:success"
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     outputs:
       deployment_id: ${{ steps.deploy.outputs.deployment_id }}
 
