--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,16 +13,14 @@ jobs:
   publish-image:
     name: "Build & Publish"
     runs-on: ubuntu-latest
-
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
 
       - name: "Docker build image with version tag"
-        run: docker build . -t $IMAGE_REG/$IMAGE_REPO:latest $IMAGE_REG/$IMAGE_REPO:${{ github.event.release.tag_name }}
+        run: docker build . -t $IMAGE_REG/$IMAGE_REPO:latest -t $IMAGE_REG/$IMAGE_REPO:${{ github.event.release.tag_name }}
 
       - name: "Login to GitHub container registry"
-        if: github.ref == 'refs/heads/master'
         uses: docker/login-action@v1
         with:
           registry: ${{ env.IMAGE_REG }}
@@ -30,5 +28,4 @@ jobs:
           password: ${{ secrets.CR_PAT }}
 
       - name: "Docker push image to ${{ env.IMAGE_REG }}"
-        if: github.ref == 'refs/heads/master'
         run: docker push $IMAGE_REG/$IMAGE_REPO
