--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: "Docker build image with version tag"
-        run: docker build . -t $IMAGE_REG/$IMAGE_REPO:latest $IMAGE_REG/$IMAGE_REPO:${{ github.event.release.tag_name }}
+        run: docker build . -t $IMAGE_REG/$IMAGE_REPO:latest -t $IMAGE_REG/$IMAGE_REPO:${{ github.event.release.tag_name }}
 
       - name: "Login to GitHub container registry"
         uses: docker/login-action@v1
