Switch to new pipeline triggers

--- a/.github/workflows/cd-release-aks.yaml
+++ b/.github/workflows/cd-release-aks.yaml
@@ -6,15 +6,9 @@
 name: CD Release - AKS
 
 on:
-  # Run when CI completes but ONLY in master branch
-  workflow_run:
-    workflows: [CI Build App]
-    branches: [master]
-    types:
-      - completed
   workflow_dispatch:
     inputs:
-      imagetag:
+      IMAGE_TAG:
         description: "Image tag to be deployed"
         required: true
         default: "latest"
@@ -37,16 +31,10 @@ jobs:
   deploy-aks:
     name: Deploy to AKS with Helm
     runs-on: ubuntu-latest
-    # Important! workaround to not being able to trigger on "type:success"
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     outputs:
       deployment_id: ${{ steps.deploy.outputs.deployment_id }}
 
     steps:
-      # Note. This trick allows both manual running with workflow_dispatch and CD triggered runs
-      - name: "Set IMAGE_TAG variable"
-        run: echo "IMAGE_TAG=${{ github.event.workflow_run.id }}${{ github.event.inputs.imagetag }}" >> $GITHUB_ENV
-
       - name: "Checkout"
         uses: actions/checkout@v1
 
@@ -74,7 +62,7 @@ jobs:
           --install \
           --namespace ${{ env.HELM_NAMESPACE }} \
           --values ./kubernetes/app.yaml \
-          --set image.tag=dev-${{ env.IMAGE_TAG }},image.repository=${{ env.IMAGE_REG }}/${{ env.IMAGE_REPO }},env.AAD_REDIRECT_URL_BASE=https://${{ env.INGRESS_DNS_HOST }},ingress.host=${{ env.INGRESS_DNS_HOST }}
+          --set image.tag=${{ github.event.inputs.IMAGE_TAG }},image.repository=${{ env.IMAGE_REG }}/${{ env.IMAGE_REPO }},env.AAD_REDIRECT_URL_BASE=https://${{ env.INGRESS_DNS_HOST }},ingress.host=${{ env.INGRESS_DNS_HOST }}
 
       - name: "End deployment - failure"
         if: ${{ failure() }}
