--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -65,3 +65,19 @@ jobs:
       - name: "Docker push image to ${{ env.IMAGE_REG }}"
         if: github.ref == 'refs/heads/master'
         run: docker push $IMAGE_REG/$IMAGE_REPO
+
+      - name: "Trigger AKS release pipeline"
+        if: github.ref == 'refs/heads/master'
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: "CD Release - AKS"
+          token: ${{ secrets.CR_PAT }}
+          inputs: '{ "IMAGE_TAG": "dev-${{ github.run_id }}" }'
+
+      - name: "Trigger Azure web app release pipeline"
+        if: github.ref == 'refs/heads/master'
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: "CD Release - Webapp"
+          token: ${{ secrets.CR_PAT }}
+          inputs: '{ "IMAGE_TAG": "dev-${{ github.run_id }}" }'
