--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-demoapp",
   "description": "Simple Node.js Express app for demos",
-  "version": "4.6.1",
+  "version": "4.7.0",
   "author": "Ben Coleman",
   "engines": {
     "node": ">=10.0.0"
@@ -22,6 +22,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@azure/msal-node": "^1.0.0-beta.0",
     "applicationinsights": "^1.8.8",
     "axios": "^0.21.0",
     "body-parser": "~1.19.0",
@@ -29,10 +30,9 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "~4.17.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.3",
-    "morgan": "~1.10.0",
-    "passport-azure-ad": "^4.3.0",
-    "express-session": "^1.17.1"
+    "morgan": "~1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.13.0",
