--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nodejs-demoapp",
   "description": "Simple Node.js Express app for demos",
-  "version": "4.7.0",
+  "version": "4.7.1",
   "author": "Ben Coleman",
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=14.0.0"
   },
   "license": "MIT",
   "repository": {
@@ -18,28 +18,30 @@
     "watch": "nodemon -e ejs",
     "test-junit": "mocha --reporter mocha-junit-reporter --exit ./tests",
     "test": "mocha --exit ./tests",
-    "test-postman": "newman run ./tests/postman_collection.json -r junit --timeout 60000 --reporter-junit-export TEST-RESULTS.xml",
-    "lint": "eslint ."
+    "test-postman": "newman run tests/postman_collection.json -r junit --timeout 60000 --reporter-junit-export api-test-results.xml --env-var apphost=localhost:3000",
+    "lint": "eslint . && prettier --check *.js",
+    "lint-fix": "eslint . --fix && prettier --write *.js"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.0.0-beta.0",
-    "applicationinsights": "^1.8.8",
-    "axios": "^0.21.0",
+    "@azure/msal-node": "^1.0.1",
+    "applicationinsights": "^1.8.10",
+    "axios": "^0.21.1",
     "body-parser": "~1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
+    "ejs": "^3.1.6",
     "express": "~4.17.1",
     "express-session": "^1.17.1",
-    "mongodb": "^3.6.3",
+    "mongodb": "^3.6.5",
     "morgan": "~1.10.0"
   },
   "devDependencies": {
-    "eslint": "^7.13.0",
-    "mocha": "^8.2.1",
+    "eslint": "^7.22.0",
+    "mocha": "^8.3.2",
     "mocha-junit-reporter": "^2.0.0",
-    "newman": "^5.2.1",
-    "supertest": "^6.0.1",
-    "nodemon": "^2.0.6"
+    "newman": "^5.2.2",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3"
   }
 }
