--- a/.github/workflows/cd-release-webapp.yaml
+++ b/.github/workflows/cd-release-webapp.yaml
@@ -6,7 +6,7 @@
 name: CD Release - Webapp
 
 on:
-  workflow_dispatchZ:
+  workflow_dispatch:
     inputs:
       IMAGE_TAG:
         description: 'Image tag to be deployed'
