--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -58,17 +58,17 @@ jobs:
           echo ${{ secrets.CR_PAT }} | docker login $IMAGE_REG -u $GITHUB_ACTOR --password-stdin
           make push IMAGE_TAG=dev-${{ github.run_id }}
 
-      # - name: 'Trigger AKS release pipeline'
-      #   if: github.ref == 'refs/heads/master'
-      #   uses: benc-uk/workflow-dispatch@v1
-      #   with:
-      #     workflow: 'CD Release - AKS'
-      #     token: ${{ secrets.CR_PAT }}
-      #     inputs: '{ "IMAGE_TAG": "dev-${{ github.run_id }}" }'
+      - name: 'Trigger AKS release pipeline'
+        if: github.ref == 'refs/heads/master'
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: 'CD Release - AKS'
+          token: ${{ secrets.CR_PAT }}
+          inputs: '{ "IMAGE_TAG": "dev-${{ github.run_id }}" }'
 
       - name: 'Trigger Azure web app release pipeline'
         if: github.ref == 'refs/heads/master'
-        uses: ${{ benc-uk/workflow-dispatch@v1 && !env.ACT }}
+        uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: 'CD Release - Webapp'
           token: ${{ secrets.CR_PAT }}
