--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -11,73 +11,65 @@ env:
 
 jobs:
   test:
-    name: "Tests & Linting"
+    name: 'Tests & Linting'
     runs-on: ubuntu-latest
     steps:
-      - name: "Checkout"
+      - name: 'Checkout'
         uses: actions/checkout@v2
 
-      - name: "NPM install"
-        run: npm install --silent
-        working-directory: ./src
+      - name: 'Run linting'
+        run: make lint
 
-      - name: "Run linting"
-        run: npm run lint
-        working-directory: ./src
+      - name: 'Run tests'
+        run: make test-report
 
-      - name: "Run tests"
-        run: npm run test-junit
-        working-directory: ./src
-
-      - name: "Upload test results"
+      - name: 'Upload test results'
         uses: actions/upload-artifact@v2
+        # Disabled when running locally with the nektos/act tool
+        if: ${{ always() && !env.ACT }}
         with:
           name: test-results
           path: ./src/test-results.xml
 
-      - name: "Report on test results"
+      - name: 'Report on test results'
         uses: ashley-taylor/junit-report-annotations-action@master
-        if: always()
+        # Disabled when running locally with the nektos/act tool
+        if: ${{ always() && !env.ACT }}
         with:
           access-token: ${{ secrets.GITHUB_TOKEN }}
           path: ./src/test-results.xml
           name: Unit test results
 
   build:
-    name: "Build & Push Image"
+    name: 'Build & Push Image'
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: "Checkout"
+      - name: 'Checkout'
         uses: actions/checkout@v2
 
-      - name: "Docker build image"
-        run: docker build . -t $IMAGE_REG/$IMAGE_REPO:dev-${{ github.run_id }}
+      - name: 'Docker build image'
+        run: make image IMAGE_TAG=dev-${{ github.run_id }}
 
-      - name: "Login to GitHub container registry"
-        if: github.ref == 'refs/heads/master'
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.IMAGE_REG }}
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+      # Only when pushing to default branch (e.g. master or main), then push image to registry
+      - name: Push to container registry
+        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+        run: |
+          echo ${{ secrets.CR_PAT }} | docker login $IMAGE_REG -u $GITHUB_ACTOR --password-stdin
+          make push IMAGE_TAG=dev-${{ github.run_id }}
 
-      - name: "Docker push image to ${{ env.IMAGE_REG }}"
-        if: github.ref == 'refs/heads/master'
-        run: docker push $IMAGE_REG/$IMAGE_REPO
-
-      - name: "Trigger AKS release pipeline"
+      - name: 'Trigger AKS release pipeline'
         if: github.ref == 'refs/heads/master'
         uses: benc-uk/workflow-dispatch@v1
         with:
-          workflow: "CD Release - AKS"
+          workflow: 'CD Release - AKS'
           token: ${{ secrets.CR_PAT }}
           inputs: '{ "IMAGE_TAG": "dev-${{ github.run_id }}" }'
 
-      - name: "Trigger Azure web app release pipeline"
+      - name: 'Trigger Azure web app release pipeline'
         if: github.ref == 'refs/heads/master'
         uses: benc-uk/workflow-dispatch@v1
         with:
-          workflow: "CD Release - Webapp"
+          workflow: 'CD Release - Webapp'
           token: ${{ secrets.CR_PAT }}
           inputs: '{ "IMAGE_TAG": "dev-${{ github.run_id }}" }'
