--- a/.github/workflows/cd-release-aks.yaml
+++ b/.github/workflows/cd-release-aks.yaml
@@ -52,7 +52,7 @@ jobs:
           helm upgrade ${{ env.HELM_RELEASE }} benc-uk/webapp \
           --install \
           --namespace ${{ env.HELM_NAMESPACE }} \
-          --values ./kubernetes/aks-live.yaml \
+          --values deploy/kubernetes/aks-live.yaml \
           --set image.tag=${{ github.event.inputs.IMAGE_TAG }},ingress.host=${{ env.INGRESS_DNS_HOST }},env.AAD_REDIRECT_URL_BASE=https://${{ env.INGRESS_DNS_HOST }}
 
       - name: 'End deployment - failure'
