--- a/.github/workflows/cd-release-webapp.yaml
+++ b/.github/workflows/cd-release-webapp.yaml
@@ -53,8 +53,7 @@ jobs:
           az deployment group create --template-file deploy/webapp.bicep -g $ARM_RES_GROUP -p webappName=$APP_NAME \
           webappImage=$IMAGE_REG/$IMAGE_REPO:${{ github.event.inputs.IMAGE_TAG }} \
           weatherKey=${{ secrets.WEATHER_API_KEY }} \
-          releaseInfo="Ref=${{ github.ref }} \
-          RunId=${{ github.run_id }}" \
+          releaseInfo="Ref=${{ github.ref }} RunId=${{ github.run_id }}" \
           aadAppId=$AAD_APP_ID \
           aadAppSecret=${{ secrets.AAD_APP_SECRET }}
 
@@ -67,6 +66,7 @@ jobs:
     environment:
       name: App Service - nodejs-demoapp
       url: https://${{ env.APP_NAME }}.azurewebsites.net/
+
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
