--- a/src/package.json
+++ b/src/package.json
@@ -18,7 +18,7 @@
     "watch": "nodemon -e ejs",
     "test-junit": "mocha --reporter mocha-junit-reporter --exit ./tests",
     "test": "mocha --exit ./tests",
-    "test-postman": "newman run tests/postman_collection.json -r junit --timeout 60000 --reporter-junit-export api-test-results.xml --env-var apphost=localhost:3000",
+    "test-postman": "newman run tests/postman_collection.json --timeout 60000 --env-var apphost=$TEST_HOST",
     "lint": "eslint . && prettier --check *.js",
     "lint-fix": "eslint . --fix && prettier --write *.js"
   },
