🥓 General github chores

--- a/.github/workflows/cd-release-aks.yaml
+++ b/.github/workflows/cd-release-aks.yaml
@@ -13,7 +13,7 @@ on:
         required: true
         default: 'latest'
 
-# Note. Required secrets: CR_PAT & AZURE_CREDENTIALS
+# Note. Required secrets: AZURE_CREDENTIALS
 
 env:
   AKS_NAME: benc
