--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -69,7 +69,7 @@ jobs:
         uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: 'CD Release - AKS'
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT }}
           inputs: '{ "IMAGE_TAG": "${{ env.IMAGE_TAG }}" }'
 
       - name: 'Trigger Azure web app release pipeline'
@@ -77,5 +77,5 @@ jobs:
         uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: 'CD Release - Webapp'
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT }}
           inputs: '{ "IMAGE_TAG": "${{ env.IMAGE_TAG }}" }'
