--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,10 @@
   "image": "ghcr.io/benc-uk/devcontainers/node:latest",
   "remoteUser": "node",
   "forwardPorts": [3000],
+
+  // Uncomment if connecting to MongoDB running in a container
+  //"runArgs": ["--network=host"],
+
   "extensions": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
