replace DarkSky with OpenWeather

--- a/src/.env.sample
+++ b/src/.env.sample
@@ -10,7 +10,7 @@
 #TODO_MONGO_DB=todoDb
 
 # ==================================================================
-# Enable Weather info page, get a key here https://darksky.net/dev/register
+# Enable Weather info page, get a key here https://openweathermap.org/api
 # ==================================================================
 #WEATHER_API_KEY=
 
