--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-demoapp",
-  "description": "Simple Node.js Express app for demos",
-  "version": "4.7.2",
+  "description": "Node.js Express app for demos",
+  "version": "4.8.0",
   "author": "Ben Coleman",
   "engines": {
     "node": ">=14.0.0"
@@ -23,25 +23,25 @@
     "lint-fix": "eslint . --fix && prettier --write *.js"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.0.3",
-    "applicationinsights": "^1.8.10",
-    "axios": "^0.21.1",
+    "@azure/msal-node": "^1.3.3",
+    "applicationinsights": "^2.1.8",
+    "axios": "^0.24.0",
     "body-parser": "~1.19.0",
     "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "~4.17.1",
-    "express-session": "^1.17.1",
-    "mongodb": "^3.6.6",
+    "express-session": "^1.17.2",
+    "mongodb": "^4.1.4",
     "morgan": "~1.10.0"
   },
   "devDependencies": {
-    "eslint": "^7.25.0",
-    "mocha": "^8.3.2",
-    "mocha-junit-reporter": "^2.0.0",
-    "newman": "^5.2.3",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "supertest": "^6.1.3"
+    "eslint": "^8.2.0",
+    "mocha": "^9.1.3",
+    "mocha-junit-reporter": "^2.0.2",
+    "newman": "^5.3.0",
+    "nodemon": "^2.0.14",
+    "prettier": "^2.4.1",
+    "supertest": "^6.1.6"
   }
 }
