--- a/.github/workflows/cd-release-aks.yaml
+++ b/.github/workflows/cd-release-aks.yaml
@@ -13,11 +13,10 @@ on:
         required: true
         default: 'latest'
 
-# Note. Required secrets: AZURE_CREDENTIALS
+# Note. Required secrets: CLUSTER_KUBECONFIG
 
 env:
-  AKS_NAME: benc
-  AKS_RES_GROUP: aks
+  CLUSTER_NAME: benc
   HELM_RELEASE: nodejs
   HELM_NAMESPACE: demoapps
   INGRESS_DNS_HOST: nodejs-demoapp.kube.benco.io
@@ -37,14 +36,21 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@v2
 
-      - name: 'Login to Azure'
-        uses: azure/login@v1.3.0
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # - name: 'Login to Azure'
+      #   uses: azure/login@v1.3.0
+      #   with:
+      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: 'Get AKS credentials'
-        run: |
-          az aks get-credentials -n $AKS_NAME -g $AKS_RES_GROUP
+      # - name: 'Get AKS credentials'
+      #   run: |
+      #     az aks get-credentials -n $AKS_NAME -g $AKS_RES_GROUP
+
+      - name: 'Set kubeconfig'
+        uses: azure/k8s-set-context@v1
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.CLUSTER_KUBECONFIG }}
+          context: ${{ env.CLUSTER_NAME }}
 
       - name: 'Helm release'
         run: |
