--- a/src/package.json
+++ b/src/package.json
@@ -16,8 +16,8 @@
     "start": "node --expose_gc server.js",
     "start-bg": "node server.js &",
     "watch": "nodemon -e ejs",
-    "test-junit": "mocha --reporter mocha-junit-reporter --exit ./tests",
-    "test": "mocha --exit ./tests",
+    "test-report": "NODE_ENV=test mocha --reporter json --exit ./tests > test-results.json",
+    "test": "NODE_ENV=test mocha --exit ./tests",
     "test-postman": "newman run tests/postman_collection.json --timeout 60000 --env-var apphost=$TEST_HOST",
     "lint": "eslint . && prettier --check *.js",
     "lint-fix": "eslint . --fix && prettier --write *.js"
@@ -26,7 +26,6 @@
     "@azure/msal-node": "^1.3.3",
     "applicationinsights": "^2.1.8",
     "axios": "^0.24.0",
-    "body-parser": "~1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
@@ -38,7 +37,6 @@
   "devDependencies": {
     "eslint": "^8.2.0",
     "mocha": "^9.1.3",
-    "mocha-junit-reporter": "^2.0.2",
     "newman": "^5.3.0",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
