Switch to ES modules and Bootstrap 5.1 (#22)
Rewritten to use ES6 modules
Switch to Bootstrap 5.1
Switch to use CSS and fonts for OpenWeather icons
Deploy with Bicep to Container Apps
Remove need for supplying base URL when auth enabled

--- a/.dockerignore
+++ b/.dockerignore
@@ -8,6 +8,8 @@ docker-compose*
 README.md
 LICENSE
 .vscode
-.env
-azure-pipelines.yml
+**/.env*
+**/.eslintrc.js
+**/mochawesome-report/
 **/node_modules
+**/tests/*
