--- a/src/package.json
+++ b/src/package.json
@@ -19,8 +19,8 @@
     "test-report": "mocha --reporter mochawesome --exit ./tests > test-results.json",
     "test": "mocha --exit ./tests",
     "test-postman": "newman run tests/postman_collection.json --timeout 60000 --env-var apphost=$TEST_HOST",
-    "lint": "eslint . && prettier --check *.js",
-    "lint-fix": "eslint . --fix && prettier --write *.js"
+    "lint": "eslint . --ext mjs && prettier --check **/*.mjs",
+    "lint-fix": "eslint . --ext mjs --fix && prettier --write **/*.mjs"
   },
   "dependencies": {
     "@azure/msal-node": "^1.3.3",
